--- a/config/docker/gitlab-docker-compose.yml
+++ b/config/docker/gitlab-docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.6'
+
 services:
   gitlab:
     image: 'gitlab/gitlab-ce:latest'
@@ -8,21 +9,19 @@ services:
       GITLAB_OMNIBUS_CONFIG: |
         external_url 'https://gitlab.cabesttan.co'
         gitlab_rails['gitlab_shell_ssh_port'] = 2222
-        nginx['redirect_http_to_https'] = true
-        nginx['ssl_certificate'] = "/apps/docker/gitlab/ssl/gitlab.cabesttan.com.crt"
-        nginx['ssl_certificate_key'] = "/apps/docker/gitlab/ssl/gitlab.cabesttan.com.key"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.gitlab.rule=Host(`gitlab.cabesttan.co`)"
+      - "traefik.http.routers.gitlab.service=gitlab"
       - "traefik.http.routers.gitlab.entrypoints=web"
-      - "traefik.http.routers.gitlab.entrypoints=websecure"
-      - "traefik.http.routers.gitlab.tls.certresolver=myresolver"
+      - "traefik.http.routers.gitlab.rule=Host(`gitlab.cabesttan.co`)"
+      - "traefik.http.services.gitlab.loadbalancer.server.port=80"
     ports:
       - '2222:22'
     volumes:
       - '/apps/docker/gitlab/config:/etc/gitlab'
       - '/apps/docker/gitlab/logs:/var/log/gitlab'
       - '/apps/docker/gitlab/data:/var/opt/gitlab'
+      - '/apps/docker/gitlab/ssl:/etc/gitlab/ssl'
     networks:
       - traefik_proxy
 
