--- a/config/docker/gitlab/gitlab-docker-compose.yml
+++ b/config/docker/gitlab/gitlab-docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.6'
+version: '3.7'
 
 services:
   gitlab:
@@ -11,9 +11,9 @@ services:
         gitlab_rails['gitlab_shell_ssh_port'] = 2222
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.gitlab.service=gitlab"
-      - "traefik.http.routers.gitlab.entrypoints=web"
       - "traefik.http.routers.gitlab.rule=Host(`gitlab.cabesttan.co`)"
+      - "traefik.http.routers.gitlab.entrypoints=web,websecure"
+      - "traefik.http.routers.gitlab.tls.certresolver=myresolver"
       - "traefik.http.services.gitlab.loadbalancer.server.port=80"
     ports:
       - '2222:22'
